[Bug #160734690] change btn_1 contrast

--- a/UI/Assets/css/main.css
+++ b/UI/Assets/css/main.css
@@ -233,7 +233,7 @@ body::-webkit-scrollbar-thumb {
 .btn_1{
     color: rgb(223, 0, 0);
     border: solid 0.1rem rgb(223, 0, 0);
-    opacity: 0.6;
+    opacity: 0.9;
     background-color:transparent;
 }
 
